<resources>
    <string name="app_name">Lumos</string>
    <string name="sample_time">7:00PM</string>
    <string name="sample_date">15 Aug</string>
    <string name="event_poster_desc">Event poster</string>
    <string name="event_time_logo">Time Vector Asset</string>
    <string name="sample_event_title">Summer School 2020</string>
    <string name="sample_question_text">What is the purpose of this app? You have to tell me all about it</string>
    <string name="top_stories_dec">Image for top stories</string>
    <string name="placeholder_text">lorem ipsum</string>
    <string name="placeholder_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel feugiat ex. Aliquam erat volutpat. Pellentesque iaculis quis nisi sed volutpat. Pellentesque pretium sit amet risus id ullamcorper. Nulla finibus a nisl nec sagittis. Integer venenatis iaculis ipsum, vitae lobortis diam suscipit ut. Pellentesque ut purus non erat porttitor cursus a a enim. Cras nec mauris nisl.</string>
    <string name="sample_blog_title">This is the name which is boring</string>
    <string name="sample_blog_image">Sample Blog Image</string>
    <string name="sample_author">Shaurya Sinha</string>
    <string name="sample_readtime">5 min</string>
    <string name="question_background">question background</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog">Blog</string>
    <string name="events">Events</string>
    <string name="practice">Practice</string>
    <string name="account">Account</string>
    <string name="answer_disclaimer_text">Points for submitted answers will be updated soon</string>
    <string name="light_mode_string">Light</string>
    <string name="dark_mode_string">Dark</string>
    <string name="follow_system_theme_string">Follow System Theme</string>
    <string name="battery_saver_string">Set By Battery Saver</string>
    <string name="theme_disclaimer_string">May not work on all devices</string>
    <string name="theme_title_string">Theme</string>
    <string name="submit_string">submit</string>
    <string name="iste_manipal_logo_text">ISTE Manipal Logo</string>
    <string name="developer_profile_image_string">Developer Profile Image</string>
    <string name="member_exclusive_feature_text">Member exclusive feature</string>
    <string name="password_reset_text">Forgot password?</string>
</resources>