<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/blog_post_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@id/cardView"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sample_blog_title"
        android:textSize="18sp"
         />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/blog_post_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@android:color/background_dark"
            android:contentDescription="@string/sample_blog_image"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/blog_post_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blog_post_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sample_author" />

    <TextView
        android:id="@+id/blog_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blog_post_author"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sample_readtime" />
</RelativeLayout>