<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="240dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:cardCornerRadius="8dp"
            android:id="@+id/event_card">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/event_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/event_poster_desc"
                    android:src="@android:color/black" />

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/sample_event_title"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sample_time"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/event_time_logo"
                    android:src="@drawable/schedule_time" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:text="@string/sample_date"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/event_card"
            android:layout_marginEnd="10dp" />


    </RelativeLayout>
</layout>